--- a/02_mainmatter/ch2_Grundlagen.tex
+++ b/02_mainmatter/ch2_Grundlagen.tex
@@ -41,10 +41,45 @@ Ursprung und Entwicklung von Projetct Alliancing, IPD und IPA bis heute
 
 \clearpage
 
-\section{Target Value Design (2TVD) als Kernmethode}
+\section{Target Value Design (TVD) als Kernmethode}
 \label{sec: 2.3}
 
 %Ziel:
 
 \subsection{TVD - Prozess oder Methode}
 \label{sec: 2.3.1}
+
+% =======================================================
+% FÜR ABSCHNITT 2.3.1: TVD - Prozess oder Methode
+% =======================================================
+%https://service.tu-dortmund.de/group/intra/ausstattung-lokaler-arbeitsplatze
+%   - Ziel: Eine präzise und trennscharfe Definition von TVD für die
+%     vorliegende Arbeit herleiten. Es soll geklärt werden, ob TVD als
+%     Prozess, als Methode oder als beides zu verstehen ist, um eine
+%     eindeutige Basis für die nachfolgende Analyse zu schaffen.
+%
+%   - Einstieg: Feststellung, dass die Begriffe "Prozess" und "Methode"
+%     in der Literatur zu TVD oft unscharf oder synonym verwendet werden.
+%
+%   - Begriffsdefinition "Methode": Ein systematisches, geplantes Vorgehen,
+%     das auf Prinzipien, Regeln und Werkzeugen basiert, um ein Ziel zu erreichen.
+%
+%   - Begriffsdefinition "Prozess": Eine logische und zeitliche Abfolge von
+%     miteinander verknüpften Aktivitäten zur Umwandlung eines Inputs in einen Output.
+%
+%   - Anwendung auf TVD:
+%     - TVD ist mehr als ein reiner Prozess, da es eine bestimmte Denkweise
+%       ("Target First"), Prinzipien (Kollaboration) und Werkzeuge voraussetzt.
+%     - Diese übergeordnete Denkweise wird jedoch erst durch einen konkreten,
+%       strukturierten Ablauf (Prozess) in der Praxis anwendbar.
+%
+%   - Fazit & Positionierung: Für diese Arbeit wird TVD als eine
+%     *MANAGEMENT-METHODE* verstanden, die durch einen
+%     _STRUKTURIERTEN PROZESS_ operationalisiert und umgesetzt wird.
+%     Diese Definition legitimiert die nachfolgende "prozessorientierte
+%     Darstellung" der Methode.
+%
+% =======================================================
+
+Zur Hinleitung auf die in \cref{ch:methodik} beschriebene, methodische Vorgehensweise soll an dieser Stelle auf das in dieser Arbeit zu Grunde liegende Verständnis von \ac{TVD} als Prozess bzw. Methode eingegangen werden.\\
+In der Literatur ist die Abgrenzung zwischen Prozess und Methode in der aktuellen Diskussion um TVD unscharf. Glenn Ballard, der als einer der Väter des TVD gilt, beschreibt letzteres
