--- a/02_mainmatter/ch2_Grundlagen.tex
+++ b/02_mainmatter/ch2_Grundlagen.tex
@@ -82,4 +82,7 @@ Ursprung und Entwicklung von Projetct Alliancing, IPD und IPA bis heute
 % =======================================================
 
 Zur Hinleitung auf die in \cref{ch:methodik} beschriebene, methodische Vorgehensweise soll an dieser Stelle auf das in dieser Arbeit zu Grunde liegende Verständnis von \ac{TVD} als Prozess bzw. Methode eingegangen werden.\\
-In der Literatur ist die Abgrenzung zwischen Prozess und Methode in der aktuellen Diskussion um TVD unscharf. Glenn Ballard, der als einer der Väter des TVD gilt, beschreibt letzteres
+In der Literatur ist die Abgrenzung zwischen Prozess und Methode in der aktuellen Diskussion um TVD unscharf. Folgt man dem Ergebnis einer einfachen Stichwortsuche in einschlägigen wissenschaftlichen Datenbanken (z.B. reseachgate.net) so wird schnell deutlich, das in der überwiegenden Mehrheit der Literatur (ca. 70\%) Target Value Design als Prozess verstanden wird.
+Glenn Ballard, der als einer Gründer des \ac{TVD} gilt, bezeichnet letzteres hingegen häufig als Managementansatz bzw. Management-Methode \autocite[]{}.
+
+In der allgemeinen Literatur wird 
