--- a/08_bibliography/references.bib
+++ b/08_bibliography/references.bib
@@ -1,4 +1,38 @@
 
+@inproceedings{paslawski_lean_2016,
+	title = {Lean {Management} in construction processes.  {Case} study on column concreting.},
+	language = {en},
+	booktitle = {4th {Annual} {International} {Conference} on {Architecture} and {Civil} {Engineering} ({ACE} 2016)},
+	publisher = {Global Science \& Technology Forum ( GSTF )},
+	author = {Pasławski, J and Nowotarski, P and Matyja, J},
+	month = apr,
+	year = {2016},
+}
+
+@book{ballard_target_2025,
+	title = {Target {Value} {Delivery} in {Building} {Projects}},
+	isbn = {1-0364-0575-3},
+	publisher = {Cambridge Scholars Publishing},
+	author = {Ballard, Glenn and Morris, Peter},
+	year = {2025},
+	keywords = {yet to read},
+}
+
+@book{becker_prozessmanagement_2012,
+	address = {Berlin, Heidelberg},
+	title = {Prozessmanagement: {Ein} {Leitfaden} zur prozessorientierten {Organisationsgestaltung}},
+	copyright = {https://www.springernature.com/gp/researchers/text-and-data-mining},
+	isbn = {978-3-642-33843-4 978-3-642-33844-1},
+	shorttitle = {Prozessmanagement},
+	url = {https://link.springer.com/10.1007/978-3-642-33844-1},
+	language = {de},
+	urldate = {2025-09-18},
+	publisher = {Springer Berlin Heidelberg},
+	editor = {Becker, Jörg and Kugeler, Martin and Rosemann, Michael},
+	year = {2012},
+	doi = {10.1007/978-3-642-33844-1},
+}
+
 @book{ohno_toyota-produktionssystem_2013,
 	title = {Das {Toyota}-{Produktionssystem}},
 	isbn = {978-3-593-42375-3},
@@ -111,24 +145,6 @@
 	year = {2025},
 	note = {Publisher: Technische Universität Berlin},
 	keywords = {000 Informatik, Informationswissenschaft, allgemeine Werke::000 Informatik, Wissen, Systeme::000 Informatik, Informationswissenschaft, allgemeine Werke, 300 Sozialwissenschaften::330 Wirtschaft::330 Wirtschaft, 300 Sozialwissenschaften::340 Recht::340 Recht, 300 Sozialwissenschaften::350 Öffentliche Verwaltung, Militärwissenschaft::351 Öffentliche Verwaltung, 300 Sozialwissenschaften::350 Öffentliche Verwaltung, Militärwissenschaft::354 Verwaltung von Wirtschaft und Umwelt, 600 Technik, Medizin, angewandte Wissenschaften::620 Ingenieurwissenschaften::620 Ingenieurwissenschaften und zugeordnete Tätigkeiten, 600 Technik, Medizin, angewandte Wissenschaften::620 Ingenieurwissenschaften::622 Bergbau und verwandte Tätigkeiten, 600 Technik, Medizin, angewandte Wissenschaften::620 Ingenieurwissenschaften::624 Ingenieurbau, 600 Technik, Medizin, angewandte Wissenschaften::620 Ingenieurwissenschaften::625 Eisenbahn- und Straßenbau, 600 Technik, Medizin, angewandte Wissenschaften::690 Hausbau, Bauhandwerk::690 Hausbau, Bauhandwerk, 700 Künste und Unterhaltung::720 Architektur::720 Architektur, Automatisierung, Baubetrieb, Bauprojektmangement, Baurobotik, Baustellenlogistik, Bauwerkserhaltung, Bauwirtschaft, Brückenbau, Digitalisierung, IOT, IPA, IPD, Künstliche Intelligenz, Materialfluss, Nachhaltigkeit, Planfeststellungsverfahren, Vergütungsmodell, digitaler Zwilling, mechanised tunnelling},
-}
-
-@inproceedings{noauthor_lean_2016,
-	title = {Lean {Management} in construction processes.  {Case} study on column concreting.},
-	language = {en},
-	booktitle = {4th {Annual} {International} {Conference} on {Architecture} and {Civil} {Engineering} ({ACE} 2016)},
-	publisher = {Global Science \& Technology Forum ( GSTF )},
-	month = apr,
-	year = {2016},
-}
-
-@book{testkey,
-	title = {Target {Value} {Delivery} in {Building} {Projects}},
-	isbn = {1-0364-0575-3},
-	publisher = {Cambridge Scholars Publishing},
-	author = {Ballard, Glenn and Morris, Peter},
-	year = {2025},
-	keywords = {yet to read},
 }
 
 @article{zimina_target_2012,
