--- a/08_bibliography/references.bib
+++ b/08_bibliography/references.bib
@@ -1,4 +1,26 @@
 
+@techreport{haghsheno_ipa-report_2025,
+	address = {Karlsruhe},
+	title = {{IPA}-{Report} 2025 - {Integrierte} {Projektabwicklung} ({IPA}) - {Entwicklung} und {Merkmale} von {IPA}-{Projekten}},
+	url = {URL: https://www.lean-ipd.de},
+	language = {de},
+	institution = {Karlsruher Institut für Technologie (KIT), Institut für Technologie und Management im Baubetrieb},
+	author = {Haghsheno, Shervin and Weinmann, Marc and Baier, Carolin and Wachter, Lena},
+	month = jul,
+	year = {2025},
+	pages = {22},
+}
+
+@book{haghsheno_lean_2019,
+	edition = {1},
+	title = {Lean {Construction}  {Begriffe} und {Methoden}},
+	isbn = {978-3-00-061123-0},
+	language = {de},
+	publisher = {German Lean Construction Institute – GLCI e. V.},
+	author = {Haghsheno, Dr Shervin and Wachter, Nadia},
+	year = {2019},
+}
+
 @inproceedings{paslawski_lean_2016,
 	title = {Lean {Management} in construction processes.  {Case} study on column concreting.},
 	language = {en},
@@ -69,12 +91,6 @@
 	editor = {Seed, William R.},
 	year = {2015},
 	note = {OCLC: 961912818},
-}
-
-@article{haghsheno_german_nodate,
-	title = {German {Lean} {Construction} {Institute} – {GLCI} e. {V}. c/o {KIT} {Institut} für {Technologie} und {Management} im {Baubetrieb} {Gotthard}-{Franz}-{Str}. 3 ({Am} {Fasanengarten}), {Geb}. 50.31 76131 {Karlsruhe} info@glci.de},
-	language = {de},
-	author = {Haghsheno, Dr Shervin and Wachter, Nadia},
 }
 
 @article{oliva_target_2024,
