Updates from Overleaf

--- a/08_bibliography/references.bib
+++ b/08_bibliography/references.bib
@@ -1,4 +1,36 @@
 
+@book{mittelstras_enzyklopaphilosophie_2024,
+	address = {Berlin, Heidelberg},
+	title = {Enzyklopädie {Philosophie} und {Wissenschaftstheorie}: {Band} 5: {Log}-{N}},
+	volume = {5},
+	copyright = {https://www.springernature.com/gp/researchers/text-and-data-mining},
+	isbn = {978-3-662-67767-4 978-3-662-67768-1},
+	shorttitle = {Enzyklopädie {Philosophie} und {Wissenschaftstheorie}},
+	url = {https://link.springer.com/10.1007/978-3-662-67768-1},
+	language = {de},
+	urldate = {2025-09-26},
+	publisher = {Springer Berlin Heidelberg},
+	editor = {Mittelstraß, Jürgen},
+	year = {2024},
+	doi = {10.1007/978-3-662-67768-1},
+}
+
+@book{mittelstras_enzyklopaphilosophie_2024-1,
+	address = {Berlin, Heidelberg},
+	title = {Enzyklopädie {Philosophie} und {Wissenschaftstheorie}: {Band} 6: {O}–{Ra}},
+	volume = {6},
+	copyright = {https://www.springernature.com/gp/researchers/text-and-data-mining},
+	isbn = {978-3-662-67769-8 978-3-662-67770-4},
+	shorttitle = {Enzyklopädie {Philosophie} und {Wissenschaftstheorie}},
+	url = {https://link.springer.com/10.1007/978-3-662-67770-4},
+	language = {de},
+	urldate = {2025-09-26},
+	publisher = {Springer Berlin Heidelberg},
+	editor = {Mittelstraß, Jürgen},
+	year = {2024},
+	doi = {10.1007/978-3-662-67770-4},
+}
+
 @techreport{haghsheno_ipa-report_2025,
 	address = {Karlsruhe},
 	title = {{IPA}-{Report} 2025 - {Integrierte} {Projektabwicklung} ({IPA}) - {Entwicklung} und {Merkmale} von {IPA}-{Projekten}},
