--- a/02_mainmatter/ch2_Grundlagen.tex
+++ b/02_mainmatter/ch2_Grundlagen.tex
@@ -91,8 +91,6 @@
 
 % Ziel: Vermittlung der Lean-Pilosophie als Ursprungsgedanke und der Weiterentwicklung über Lean Construction zu kollaborativen Projekabwicklungsmodellen
 
-\textit{Einleitung - Hinführung zur Notwendigkeit neuer Ansätze nach der Kritik an der konventionellen Projektabwicklung (aus Abschnitt 2.1). Die Philosophie des Lean Managements bietet hierfür das Fundament.}
-
 Die im vorangegangenen Abschnitt aufgezeigten Schwachstellen konventioneller, sequenzieller Projektabwicklung sind keineswegs ein neues Phänomen oder eine reine Eigenheit der Bauwirtschaft. Vergleichbare Herausforderungen zeigten sich bereits nach dem Zweiten Weltkrieg in der japanischen Automobilindustrie. Die dort vorherrschenden Produktionsmethoden waren von Ineffizienz und Verschwendung geprägt, was angesichts knapper Ressourcen nicht tragbar war. Als Reaktion darauf entwickelte der Ingenieur Taiichi Ohno bei Toyota einen grundlegend neuen Managementansatz, der heute als das Toyota-Produktionssystem bekannt ist und das Fundament der Lean-Philosophie bildet.
 
 Ursprung des Ansatzes (Lean Management) Skizzieren
@@ -109,8 +107,23 @@ Ursprung und Entwicklung von Projetct Alliancing, IPD und IPA bis heute
 \subsection{Prinzipien und Merkmale der Integrierten Projektabwicklung (IPA)}
 \label{sec:2.2.2}
 
+% - Positionierung: IPA als "Betriebssystem" für die Lean-Prinzipien.
+% - Zentrale Merkmale definieren:
+%   - Frühzeitige Integration aller Schlüsselpartner.
+%   - Mehrparteienvertrag.
+%   - Gemeinsames Risikomanagement (Chancen-/Risikopool).
+%   - Kollaborative Kultur statt adversialer Haltung.
+
 \subsection{Internationale Erfolge und Status Quo in Deutschland}
 \label{sec:2.2.3}
+
+% - Internationale Perspektive: Ursprünge und Erfolge im angelsächsischen 
+%   Raum (Project Alliancing, IPD) (Quelle: Cook et al., 2014).
+% - Situation in Deutschland:
+%   - Thema hat stark an Fahrt aufgenommen.
+%   - Anzahl der Pilotprojekte nennen (Quelle: Haghsheno et al., 2024).
+% - Überleitung zu 2.3: Feststellung, dass TVD die zentrale Methode zur 
+%   Kosten- und Wertsteuerung in IPA-Modellen ist.
 
 \clearpage
 
