Updates from Overleaf

--- a/00_config/packages.tex
+++ b/00_config/packages.tex
@@ -64,3 +64,6 @@
 
 \usepackage{tikz}
 \usetikzlibrary{shapes.geometric, arrows.meta, positioning}
+
+% Platzierung von Diagrammen und Tabellen
+\usepackage{placeins}
