Updates from Overleaf

--- a/02_mainmatter/ch3_Methodik.tex
+++ b/02_mainmatter/ch3_Methodik.tex
@@ -127,7 +127,7 @@ Die hier Angewandte Suchstrategie verwendet Schlüsselbegriffe bzw. Wörter und 
 
 \clearpage
 
-Ergebnis der Literaturrecherche
+Der Auswahlprozess relevanter Literatur erfolgt nach der PRISMA-Methode (Preferred Reporting Items for Systematic Reviews and Meta-Analyses). Als international anerkannte Richtlinie bildet diese Methode den Prozess der von der Suche, über die Auswahl bis hin zur Präsentation von Studien ab und gewährleistet Transparenz (Reproduzierbarkeit), Vollständigkeit und Vergleichbarkeit für die Forschungsergebnisse. Konkret definiert das Protokoll einen mehrstufigen Filterprozess, sowie die dementsprechende Visualisierung in einem Flussidiagramm wie nachfolgend dargestellt (\cref{fig:prisma_flowchart}).
 
 \begin{figure}[hbt!]
   \centering
