Updates from Overleaf

--- a/02_mainmatter/ch3_Methodik.tex
+++ b/02_mainmatter/ch3_Methodik.tex
@@ -4,6 +4,8 @@
 % Ziel: Das Vorgehen der Arbeit transparent und wissenschaftlich nachvollziehbar darlegen.
 % Es wird der "Plan" für die Forschung beschrieben.
 
+Wie in \cref{ch:einleitung} dargelegt, erfordert die Bewältigung der aktuellen Herausforderungen im Bauwesen neue Ansätze der Projektabwicklung wie \
+
 \section{Forschungsdesign und methodische Verortung}
 \label{sec: 3.1}
 %   - Ziel: Wahl der Methodik begründen und wissenschaftlich einordnen.
@@ -127,7 +129,7 @@ Die hier Angewandte Suchstrategie verwendet Schlüsselbegriffe bzw. Wörter und 
 
 \clearpage
 
-Der Auswahlprozess relevanter Literatur erfolgt nach der PRISMA-Methode (Preferred Reporting Items for Systematic Reviews and Meta-Analyses). Als international anerkannte Richtlinie bildet diese Methode den Prozess der von der Suche, über die Auswahl bis hin zur Präsentation von Studien ab und gewährleistet Transparenz (Reproduzierbarkeit), Vollständigkeit und Vergleichbarkeit für die Forschungsergebnisse. Konkret definiert das Protokoll einen mehrstufigen Filterprozess, sowie die dementsprechende Visualisierung in einem Flussidiagramm wie nachfolgend dargestellt (\cref{fig:prisma_flowchart}).
+Der Auswahlprozess relevanter Literatur erfolgt nach der PRISMA-Methode (Preferred Reporting Items for Systematic Reviews and Meta-Analyses). Als international anerkannte Richtlinie bildet diese den Prozess der von der Suche, über die Auswahl bis hin zur Präsentation von Studien ab und gewährleistet Transparenz (Reproduzierbarkeit), Vollständigkeit und Vergleichbarkeit für die Forschungsergebnisse \autocite{page_2021_prisma}. Konkret definiert das Protokoll einen mehrstufigen Filterprozess, sowie die dementsprechende Visualisierung in einem Flussdiagramm wie nachfolgend dargestellt (\cref{fig:prisma_flowchart}).
 
 \begin{figure}[hbt!]
   \centering
