--- a/08_bibliography/references.bib
+++ b/08_bibliography/references.bib
@@ -1,4 +1,51 @@
 
+@article{page_2021_prismaList,
+	title = {{PRISMA} 2020 {Checklist}},
+	issn = {1756-1833},
+	shorttitle = {The {PRISMA} 2020 statement},
+	url = {https://www.bmj.com/lookup/doi/10.1136/bmj.n71},
+	doi = {10.1136/bmj.n71},
+	abstract = {Abstract 2 See the PRISMA 2020 for Abstracts checklist.},
+	language = {en},
+	urldate = {2025-09-28},
+	journal = {BMJ},
+	author = {Page, Matthew J and McKenzie, Joanne E and Bossuyt, Patrick M and Boutron, Isabelle and Hoffmann, Tammy C and Mulrow, Cynthia D and Shamseer, Larissa and Tetzlaff, Jennifer M and Akl, Elie A and Brennan, Sue E and Chou, Roger and Glanville, Julie and Grimshaw, Jeremy M and Hróbjartsson, Asbjørn and Lalu, Manoj M and Li, Tianjing and Loder, Elizabeth W and Mayo-Wilson, Evan and McDonald, Steve and McGuinness, Luke A and Stewart, Lesley A and Thomas, James and Tricco, Andrea C and Welch, Vivian A and Whiting, Penny and Moher, David},
+	month = mar,
+	year = {2021},
+	pages = {n71},
+}
+
+@article{page_2021_prisma,
+	title = {The {PRISMA} 2020 statement: an updated guideline for reporting systematic reviews},
+	volume = {372},
+	copyright = {© Author(s) (or their employer(s)) 2019. Re-use permitted under CC                 BY. No commercial re-use. See rights and permissions. Published by                 BMJ.. http://creativecommons.org/licenses/by/4.0/This is an Open Access article distributed in accordance with the terms of the Creative Commons Attribution (CC BY 4.0) license, which permits others to distribute, remix, adapt and build upon this work, for commercial use, provided the original work is properly cited. See: http://creativecommons.org/licenses/by/4.0/.},
+	issn = {1756-1833},
+	shorttitle = {The {PRISMA} 2020 statement},
+	url = {https://www.bmj.com/content/372/bmj.n71},
+	doi = {10.1136/bmj.n71},
+	abstract = {{\textless}p{\textgreater}The Preferred Reporting Items for Systematic reviews and Meta-Analyses (PRISMA) statement, published in 2009, was designed to help systematic reviewers transparently report why the review was done, what the authors did, and what they found. Over the past decade, advances in systematic review methodology and terminology have necessitated an update to the guideline. The PRISMA 2020 statement replaces the 2009 statement and includes new reporting guidance that reflects advances in methods to identify, select, appraise, and synthesise studies. The structure and presentation of the items have been modified to facilitate implementation. In this article, we present the PRISMA 2020 27-item checklist, an expanded checklist that details reporting recommendations for each item, the PRISMA 2020 abstract checklist, and the revised flow diagrams for original and updated reviews.{\textless}/p{\textgreater}},
+	language = {en},
+	urldate = {2025-09-28},
+	journal = {BMJ},
+	author = {Page, Matthew J. and McKenzie, Joanne E. and Bossuyt, Patrick M. and Boutron, Isabelle and Hoffmann, Tammy C. and Mulrow, Cynthia D. and Shamseer, Larissa and Tetzlaff, Jennifer M. and Akl, Elie A. and Brennan, Sue E. and Chou, Roger and Glanville, Julie and Grimshaw, Jeremy M. and Hróbjartsson, Asbjørn and Lalu, Manoj M. and Li, Tianjing and Loder, Elizabeth W. and Mayo-Wilson, Evan and McDonald, Steve and McGuinness, Luke A. and Stewart, Lesley A. and Thomas, James and Tricco, Andrea C. and Welch, Vivian A. and Whiting, Penny and Moher, David},
+	month = mar,
+	year = {2021},
+	pmid = {33782057},
+	note = {Publisher: British Medical Journal Publishing Group
+Section: Research Methods \&amp; Reporting},
+	pages = {n71},
+}
+
+@techreport{AIA_2007__integrated,
+	address = {California},
+	title = {Integrated {Project} {Delivery}: {A} {Guide}},
+	language = {en},
+	institution = {The American Institute of Architects},
+	author = {The American Institute of Architects},
+	year = {2007},
+	pages = {62},
+}
+
 @book{mittelstras_enzyklopaphilosophie_2024,
 	address = {Berlin, Heidelberg},
 	title = {Enzyklopädie {Philosophie} und {Wissenschaftstheorie}: {Band} 5: {Log}-{N}},
