Updates from Overleaf

--- a/02_mainmatter/ch3_Methodik.tex
+++ b/02_mainmatter/ch3_Methodik.tex
@@ -86,50 +86,8 @@ Wie in \cref{ch:einleitung} dargelegt, erfordert die Bewältigung der aktuellen 
 \label{sec: 3.2}
 
 %   - Ziel: Das Vorgehen bei der Literatursuche und -auswahl exakt dokumentieren.
-%   - Inhalt:
 
-Für die systematische Literaturrecherche werden zunächst relevante Datenbanken identifiziert. Der Prozess wurde in drei Stufen gegliedert:
-
-1. Größe - International \& Interdisziplinär
-\begin{itemize}[leftmargin=2em]
-    \item \textbf{Scopus}: Bietet eine extrem breite Abdeckung von ingenieurwissenschaftlichen und technischen Publikationen.
-    \item \textbf{Web of Science}: Ist ähnlich umfassend wie Scopus und eine Standarddatenbank in der Wissenschaft.
-\end{itemize}
-2. Fachspezifische Datenbanken mit Relevanz für Bauingenieurwesen bzw. Baubetrieb
-\begin{itemize}[leftmargin=2em]
-    \item \textbf{Scopus}: Bietet eine extrem breite Abdeckung von ingenieurwissenschaftlichen und technischen Publikationen.
-    \item \textbf{Web of Science}: Ist ähnlich umfassend wie Scopus und eine Standarddatenbank in der Wissenschaft.
-\end{itemize}
-3. Graue Literatur - Der Blick in die Praxis
-\begin{itemize}[leftmargin=2em]
-    \item \textbf{Scopus}: Bietet eine extrem breite Abdeckung von ingenieurwissenschaftlichen und technischen Publikationen.
-    \item \textbf{Web of Science}: Ist ähnlich umfassend wie Scopus und eine Standarddatenbank in der Wissenschaft.
-\end{itemize}
-
-Die hier Angewandte Suchstrategie verwendet Schlüsselbegriffe bzw. Wörter und Kombinationen auf deutsch und englisch:
-
-\begin{table}[hbt!]
-  \centering
-  \caption{Systematische Gliederung der Suchbegriffe und -operatoren}
-  \label{tab:suchstrategie}
-  \begin{tabularx}{\textwidth}{l >{\raggedright\arraybackslash}X >{\raggedright\arraybackslash}X l}
-    \toprule
-    \textbf{Such-Konzept} & \textbf{Englische Schlagwörter} & \textbf{Deutsche Schlagwörter} & \textbf{Operatoren} \\
-    \midrule
-    Kernthema & "Target Value Design", "TVD", "Target Costing" & "Target Value Design", "TVD", "Zielkostenmanagement" & \texttt{OR} \\
-    \addlinespace
-    Kontext & "construction", "building industry", "AEC" & "Bauwesen", "Bauwirtschaft", "Bauprojekte" & \texttt{OR} \\
-    \addlinespace
-    Spez. Kontext & "Germany", "German construction" & "deutsche Baupraxis", "Deutschland", "HOAI", "VOB" & \texttt{OR} \\
-    \addlinespace
-    Ziel (Prozess) & "process*", "method*", "framework", "implementation" & "Prozess*", "Methode*", "Anwendung", "Vorgehensmodell" & \texttt{OR}, \texttt{*} \\
-    \bottomrule
-  \end{tabularx}
-\end{table}
-
-\clearpage
-
-Der Auswahlprozess relevanter Literatur erfolgt nach der PRISMA-Methode (Preferred Reporting Items for Systematic Reviews and Meta-Analyses). Als international anerkannte Richtlinie bildet diese den Prozess der von der Suche, über die Auswahl bis hin zur Präsentation von Studien ab und gewährleistet Transparenz (Reproduzierbarkeit), Vollständigkeit und Vergleichbarkeit für die Forschungsergebnisse \autocite{page_2021_prisma}. Konkret definiert das Protokoll einen mehrstufigen Filterprozess, sowie die dementsprechende Visualisierung in einem Flussdiagramm wie nachfolgend dargestellt (\cref{fig:prisma_flowchart}).
+Der Auswahlprozess relevanter Literatur stützt sich auf das PRISMA-Protokoll (Preferred Reporting Items for Systematic Reviews and Meta-Analyses). Dieses bildet, als international anerkannte Richtlinie für Literatur-Reviews, den gesamten Prozess der von der Suche, über die Auswahl bis hin zur Präsentation von Studien ab und gewährleistet Transparenz (Reproduzierbarkeit), Vollständigkeit und Vergleichbarkeit für die Forschungsergebnisse \autocite{page_2021_prisma}. Der im PRISMA-Protokoll definierte, mehrstufigen Filter- und Auswahlprozess dient hier als methodische Grundlage für die systematische Literaturrecherche und  in (\cref{fig:prisma_flowchart}) nachfolgend dargestellt.
 
 \begin{figure}[hbt!]
   \centering
@@ -142,7 +100,7 @@ Der Auswahlprozess relevanter Literatur erfolgt nach der PRISMA-Methode (Preferr
       rectangle, 
       draw=black, 
       fill=gray!10, 
-      text width=0.60\textwidth, 
+      text width=0.50\textwidth, 
       minimum height=1.5cm, 
       text centered
     },
@@ -217,6 +175,51 @@ Der Auswahlprozess relevanter Literatur erfolgt nach der PRISMA-Methode (Preferr
   \caption{PRISMA-Flussdiagramm des systematischen Literaturrechercheprozesses}
   \label{fig:prisma_flowchart}
 \end{figure}
+
+\clearpage
+
+\subsection{Stufe 1: Identifizierung}
+Im ersten Schritt der Literaturrecherche wurden zunächst relevante zunächst relevante Datenbanken identifiziert. Dabei wurden die Quellen in drei Arten untergliedert:
+
+1. Größe - International \& Interdisziplinär
+\begin{itemize}[leftmargin=2em]
+    \item \textbf{Scopus}: Bietet eine extrem breite Abdeckung von ingenieurwissenschaftlichen und technischen Publikationen.
+    \item \textbf{Web of Science}: Ist ähnlich umfassend wie Scopus und eine Standarddatenbank in der Wissenschaft.
+    \item \textbf{Google Scholar}:
+\end{itemize}
+2. Fachspezifische Datenbanken mit Relevanz für Bauingenieurwesen bzw. Baubetrieb
+\begin{itemize}[leftmargin=2em]
+    \item \textbf{Scopus}: Bietet eine extrem breite Abdeckung von ingenieurwissenschaftlichen und technischen Publikationen.
+    \item \textbf{Web of Science}: Ist ähnlich umfassend wie Scopus und eine Standarddatenbank in der Wissenschaft.
+\end{itemize}
+3. Graue Literatur - Der Blick in die Praxis
+\begin{itemize}[leftmargin=2em]
+    \item \textbf{Scopus}: Bietet eine extrem breite Abdeckung von ingenieurwissenschaftlichen und technischen Publikationen.
+    \item \textbf{Web of Science}: Ist ähnlich umfassend wie Scopus und eine Standarddatenbank in der Wissenschaft.
+\end{itemize}
+
+
+
+Die hier Angewandte Suchstrategie verwendet Schlüsselbegriffe bzw. Wörter und Kombinationen auf deutsch und englisch:
+
+\begin{table}[hbt!]
+  \centering
+  \caption{Systematische Gliederung der Suchbegriffe und -operatoren}
+  \label{tab:suchstrategie}
+  \begin{tabularx}{\textwidth}{l >{\raggedright\arraybackslash}X >{\raggedright\arraybackslash}X l}
+    \toprule
+    \textbf{Such-Konzept} & \textbf{Englische Schlagwörter} & \textbf{Deutsche Schlagwörter} & \textbf{Operatoren} \\
+    \midrule
+    Kernthema & "Target Value Design", "TVD", "Target Costing" & "Target Value Design", "TVD", "Zielkostenmanagement" & \texttt{OR} \\
+    \addlinespace
+    Kontext & "construction", "building industry", "AEC" & "Bauwesen", "Bauwirtschaft", "Bauprojekte" & \texttt{OR} \\
+    \addlinespace
+    Spez. Kontext & "Germany", "German construction" & "deutsche Baupraxis", "Deutschland", "HOAI", "VOB" & \texttt{OR} \\
+    \addlinespace
+    Ziel (Prozess) & "process*", "method*", "framework", "implementation" & "Prozess*", "Methode*", "Anwendung", "Vorgehensmodell" & \texttt{OR}, \texttt{*} \\
+    \bottomrule
+  \end{tabularx}
+\end{table}
 
 %     - Recherchestrategie: Genutzte Datenbanken (Scopus, etc.), Fachinstitutionen (GLCI, etc.).
 %     - Suchbegriffe: Beispiele für Keyword-Kombinationen (DE/EN).
